Fix navigation visibility and reduce header spacing

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ OPENAI_MODEL=gpt-4o-mini
 # Or use Gemini
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-1.5-flash
+
+# Email notifications for submissions
+GMAIL_APP_PASSWORD=your-app-password-here
